--- a/index.html
+++ b/index.html
@@ -56,6 +56,166 @@
         </div>
       </div>
     </nav>
+    <!-- End Navbar -->
+
+    <!-- Page Content -->
+    <div class="page-content page-home">
+      <!-- Carousel -->
+      <section class="store-carousel">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <div
+                class="carousel slide"
+                id="storeCarousel"
+                data-ride="carousel"
+              >
+                <ol class="carousel-indicators">
+                  <li
+                    class="active"
+                    data-target="#storeCarousel"
+                    data-slide-to="0"
+                  ></li>
+                  <li data-target="#storeCarousel" data-slide-to="1"></li>
+                  <li data-target="#storeCarousel" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img
+                      src="/images/banner.jpg"
+                      alt="Carousel Image"
+                      class="d-block w-100"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="/images/banner.jpg"
+                      alt="Carousel Image"
+                      class="d-block w-100"
+                    />
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="/images/banner.jpg"
+                      alt="Carousel Image"
+                      class="d-block w-100"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- end Carousel -->
+
+      <!-- Categories -->
+      <div class="section store-trend-categories">
+        <div class="container">
+          <div class="row">
+            <div class="col-12" data-aos="fade-up">
+              <h5>Trend Categories</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div
+              class="col-6 col-md-3 col-lg-2"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <a href="#" class="components-categories d-block">
+                <div class="categories-image">
+                  <img
+                    src="/images/categories-gadgets.svg"
+                    alt=""
+                    class="w-100"
+                  />
+                </div>
+                <p class="categories-text">Gadgets</p>
+              </a>
+            </div>
+            <div
+              class="col-6 col-md-3 col-lg-2"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <a href="#" class="components-categories d-block">
+                <div class="categories-image">
+                  <img
+                    src="/images/categories-furniture.svg"
+                    alt=""
+                    class="w-100"
+                  />
+                </div>
+                <p class="categories-text">Furniture</p>
+              </a>
+            </div>
+            <div
+              class="col-6 col-md-3 col-lg-2"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
+              <a href="#" class="components-categories d-block">
+                <div class="categories-image">
+                  <img
+                    src="/images/categories-makeup.svg"
+                    alt=""
+                    class="w-100"
+                  />
+                </div>
+                <p class="categories-text">Make Up</p>
+              </a>
+            </div>
+            <div
+              class="col-6 col-md-3 col-lg-2"
+              data-aos="fade-up"
+              data-aos-delay="400"
+            >
+              <a href="#" class="components-categories d-block">
+                <div class="categories-image">
+                  <img
+                    src="/images/categories-sneaker.svg"
+                    alt=""
+                    class="w-100"
+                  />
+                </div>
+                <p class="categories-text">Sneaker</p>
+              </a>
+            </div>
+            <div
+              class="col-6 col-md-3 col-lg-2"
+              data-aos="fade-up"
+              data-aos-delay="500"
+            >
+              <a href="#" class="components-categories d-block">
+                <div class="categories-image">
+                  <img
+                    src="/images/categories-tools.svg"
+                    alt=""
+                    class="w-100"
+                  />
+                </div>
+                <p class="categories-text">Tools</p>
+              </a>
+            </div>
+            <div
+              class="col-6 col-md-3 col-lg-2"
+              data-aos="fade-up"
+              data-aos-delay="600"
+            >
+              <a href="#" class="components-categories d-block">
+                <div class="categories-image">
+                  <img src="/images/categories-baby.svg" alt="" class="w-100" />
+                </div>
+                <p class="categories-text">Baby</p>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- end Categories -->
+    </div>
+    <!-- End Page Content -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="/vendor/jquery/jquery.slim.min.js"></script>
