--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <section class="store-carousel">
         <div class="container">
           <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12" data-aos="zoom-in">
               <div
                 class="carousel slide"
                 id="storeCarousel"
@@ -214,6 +214,178 @@
         </div>
       </div>
       <!-- end Categories -->
+
+      <!-- New Products -->
+      <section class="store-new-products">
+        <div class="container">
+          <div class="row">
+            <div class="col-12" data-aos="fade-up">
+              <h5>New Products</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div
+              class="col-6 col-md-4 col-lg-3"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <a href="/details.html" class="component-products d-block">
+                <div class="products-thumbnail">
+                  <div
+                    class="products-image"
+                    style="
+                      background-image: url('/images/products-apple-watch.jpg');
+                    "
+                  ></div>
+                </div>
+                <div class="products-text">Apple Watch 4</div>
+                <div class="products-price">$890</div>
+              </a>
+            </div>
+            <div
+              class="col-6 col-md-4 col-lg-3"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <a href="/details.html" class="component-products d-block">
+                <div class="products-thumbnail">
+                  <div
+                    class="products-image"
+                    style="
+                      background-image: url('/images/products-orange-bogotta.jpg');
+                    "
+                  ></div>
+                </div>
+                <div class="products-text">Orange Boggotta</div>
+                <div class="products-price">$94,509</div>
+              </a>
+            </div>
+            <div
+              class="col-6 col-md-4 col-lg-3"
+              data-aos="fade-up"
+              data-aos-delay="300"
+            >
+              <a href="/details.html" class="component-products d-block">
+                <div class="products-thumbnail">
+                  <div
+                    class="products-image"
+                    style="
+                      background-image: url('/images/products-sofa-ternyaman.jpg');
+                    "
+                  ></div>
+                </div>
+                <div class="products-text">Sofa Ternyaman</div>
+                <div class="products-price">$1,409</div>
+              </a>
+            </div>
+            <div
+              class="col-6 col-md-4 col-lg-3"
+              data-aos="fade-up"
+              data-aos-delay="400"
+            >
+              <a href="/details.html" class="component-products d-block">
+                <div class="products-thumbnail">
+                  <div
+                    class="products-image"
+                    style="
+                      background-image: url('/images/products-bubuk-maketti.jpg');
+                    "
+                  ></div>
+                </div>
+                <div class="products-text">Bubuk Maketti</div>
+                <div class="products-price">$225</div>
+              </a>
+            </div>
+            <div
+              class="col-6 col-md-4 col-lg-3"
+              data-aos="fade-up"
+              data-aos-delay="500"
+            >
+              <a href="/details.html" class="component-products d-block">
+                <div class="products-thumbnail">
+                  <div
+                    class="products-image"
+                    style="
+                      background-image: url('/images/products-tatakan-gelas.jpg');
+                    "
+                  ></div>
+                </div>
+                <div class="products-text">Tatakan Gelas</div>
+                <div class="products-price">$45,184</div>
+              </a>
+            </div>
+            <div
+              class="col-6 col-md-4 col-lg-3"
+              data-aos="fade-up"
+              data-aos-delay="600"
+            >
+              <a href="/details.html" class="component-products d-block">
+                <div class="products-thumbnail">
+                  <div
+                    class="products-image"
+                    style="
+                      background-image: url('/images/products-mavic-kawe.jpg');
+                    "
+                  ></div>
+                </div>
+                <div class="products-text">Mavic kawe</div>
+                <div class="products-price">$503</div>
+              </a>
+            </div>
+            <div
+              class="col-6 col-md-4 col-lg-3"
+              data-aos="fade-up"
+              data-aos-delay="700"
+            >
+              <a href="/details.html" class="component-products d-block">
+                <div class="products-thumbnail">
+                  <div
+                    class="products-image"
+                    style="
+                      background-image: url('/images/products-black-edition-nike.jpg');
+                    "
+                  ></div>
+                </div>
+                <div class="products-text">Black Edition Nike</div>
+                <div class="products-price">$70,482</div>
+              </a>
+            </div>
+            <div
+              class="col-6 col-md-4 col-lg-3"
+              data-aos="fade-up"
+              data-aos-delay="800"
+            >
+              <a href="/details.html" class="component-products d-block">
+                <div class="products-thumbnail">
+                  <div
+                    class="products-image"
+                    style="
+                      background-image: url('/images/products-monkey-toys.jpg');
+                    "
+                  ></div>
+                </div>
+                <div class="products-text">Monkey Toys</div>
+                <div class="products-price">$783</div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End New Products -->
+
+      <!-- Footer -->
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="col-12 text-center">
+              <p class="pt-4 pb-2">
+                2022 Copyright Store. All Rights Reserved.
+              </p>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!-- end Footer -->
     </div>
     <!-- End Page Content -->
 
